[package]
name = "z2m2homie"
version = "0.1.0"
authors = ["Aria Stewart <aredridel@dinhe.net>"]
edition = "2018"

[dependencies]
rumqttc = "^0.5.0"
tokio = { version = "^1.4", features = ["full"]}
toml = "^0.5.8"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
sonor = "^1.1.0"
eyre = "^0.6.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1